hardware/stm32/.metadata/.plugins/org.eclipse.cdt.ui/TEST.build.log
15:15:37 **** Incremental Build of configuration Debug for project TEST ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:170:4: warning: "/*" within comment [-Wcomment]
  170 |    /*
      |     
../Core/Src/main.c:174:3: warning: "/*" within comment [-Wcomment]
  174 |   /* USER CODE END 3 */
      |    
../Core/Src/main.c:221:13: error: invalid storage class for function 'MX_GPIO_Init'
  221 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:290:1: error: expected declaration or statement at end of input
  290 | }
      | ^
../Core/Src/main.c: At top level:
../Core/Src/main.c:50:13: warning: 'MX_GPIO_Init' used but never defined
   50 | static void MX_GPIO_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:281:6: warning: 'Error_Handler' defined but not used [-Wunused-function]
  281 | void Error_Handler(void)
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:221:13: warning: 'MX_GPIO_Init' defined but not used [-Wunused-function]
  221 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:181:6: warning: 'SystemClock_Config' defined but not used [-Wunused-function]
  181 | void SystemClock_Config(void)
      |      ^~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

15:15:38 Build Failed. 3 errors, 6 warnings. (took 1s.588ms)

